style.css
:root {
  /* primary */
  --light-red: hsl(356, 100%, 66%);
  --very-light-red: hsl(355, 100%, 74%); /* (CTA hover background) */
  --very-dark-blue: hsl(208, 49%, 24%); /* (headings) */

  /* neutral */
  --white: hsl(0, 0%, 100%); /* (text) */
  --grayish-blue: hsl(240, 2%, 79%); /* ( footer text) */
  --very-dark-grayish-blue: hsl(207, 13%, 34%); /* (body copy) */
  --very-dark-black-blue: hsl(240, 10%, 16%); /* (footer background) */

  /* gradient */
  /*Background gradient - Intro/CTA mobile nav:*/
  --very-light-red: hsl(13, 100%, 72%);
  --light-red: hsl(353, 100%, 62%);

  /*Background gradient - body:*/
  --very-dark-gray-blue: hsl(237, 17%, 21%)
  --very-dark-desaturated blue: hsl(237, 23%, 32%)
}

*{
  box-sizing: border-box;
}

@font-face {
  font-family: overpass300;
  src: url('font/over300.ttf');
  /* reguler 400 */
}

@font-face {
  font-family: overpass600;
  src: url('font/over600.ttf');
  /* semi bold */
}

@font-face {
  font-family: ubuntu600;
  src: url('font/Ubuntu-Medium.ttf');
}

header{
  background-image: url('images/bg-pattern-intro-desktop.svg'), linear-gradient(30deg, var(--very-light-red), var(--light-red) 90%);
  background-size: 180%, auto;
  background-position: 30% center, center;
  background-repeat: no-repeat;
  height: 30rem;
  border-radius: 0 0 0 100px;
}

.topbar-menu li a{
  font-family: overpass300;
}

.topbar-menu li{
  margin-left: 1rem;
}

.dropdown-item:focus, .dropdown-item:hover{
  font-weight: 600;
}

.user button{
  border-radius: 50px;
  padding: .5rem 1.5rem .5rem 1.5rem;
  font-size: 1rem;
  font-family: ubuntu600;
  color: var(--white);
  transition: .5s;
}

.user button:nth-child(2){
  background-color: var(--white);
  color: var(--light-red);
}

.hamburger{
  display: none;
  cursor: pointer;
}

.bar{
  display: block;
  width: 30px;
  height: 3px;
  margin: 5px auto;
  -webkit-transition: all 0.3s ease-in-out;
  background-color: var(--white);
}

.user button:hover{
  color: var(--white);
  background-color: hsl(0, 0%, 100%, .5);
}

.jumbotron h1{
  font-family: overpass300;
  font-weight: 400;
}

.jumbotron-button{
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-gap: 1rem;
}

.jumbotron-button button{
  border-radius: 50px;
  font-family: ubuntu600;
  border: 1px solid white;
  color: white;
  padding: .6rem 1rem .6rem 1rem;
  transition: .5s;
  font-weight: 600;
}

.jumbotron-button button:nth-child(1){
  background-color: var(--white);
  color: var(--light-red);
}


.jumbotron-button button:hover{
  color: var(--white);
  background-color: hsl(0, 0%, 100%, .3);
  border: none;
}

#about-comp{
  min-height: 800px;
  background-image: url('images/illustration-editor-desktop.svg');
  background-position: 145% 5%;
  background-repeat: no-repeat;
  background-size: 60%;
  margin-bottom: 3rem;
}

.title{
  padding-top: 5rem;
  padding-bottom: 3rem;
  margin-bottom: 1rem;
}

#navbarDropdown{
  color: white !important;
}

#navbarDropdown:hover{
  text-decoration: underline 2px;
}

#about-comp h1{
  font-family: overpass600;
  font-weight: 600;
  color: var(--very-dark-blue);
}

.desc-top{
  margin-bottom: 3rem;
}

.content p{
  line-height: 2rem;
  font-family: overpass300;
  font-weight: 300;
  color: var(--very-dark-grayish-blue);
  margin-top: 1rem;
}

.content h3{
  font-family: overpass600;
  color: var(--very-dark-blue);
}

.component{
  display: none;
}

#insight{
  background-image: url('images/bg-pattern-circles.svg'), linear-gradient(45deg, #2c2d3f 30%, #3f4164);
  background-repeat: no-repeat;
  border-top-right-radius: 4rem;
  border-bottom-left-radius: 4rem;
  padding-top: 4rem;
  padding-bottom: 4rem;
  margin-top: 1.5rem;
  margin-bottom: 5rem;
}

#insight .container img{
  margin-top: -9rem;
  margin-bottom: -12rem;
}

.phone-text h1{
  color: var(--white);
  font-family: overpass600;
}

.phone-text p{
  margin-top: 1.5rem;
  line-height: 2rem;
  color: var(--grayish-blue);
}

#features{
  background-image: url('images/illustration-laptop-desktop.svg');
  background-position: -30% 50%;
  background-repeat: no-repeat;
  background-size: 60%;
  margin-bottom: 3rem;
  margin-top: 5rem;
  height: 700px;
}

#features .content{
  margin-top: 7rem;
}

.features-top{
  margin-bottom: 3rem;
}

footer{
  background-color: var(--very-dark-black-blue);
  border-top-right-radius: 8rem;
  color: white;
}

footer .container{
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  padding-block: 4rem 6rem;
  font-family: overpass300;
}

footer h5{
  margin-bottom: 2rem;
  margin-top: 1rem;
  font-size: 1.2rem;
}

footer ul li{
  margin-top: 1rem;
  color: var(--grayish-blue);
  transition: .5s;
}

footer ul li:hover{
  cursor: pointer;
  color: var(--white);
}

.attribution {
  font-size: 11px;
  text-align: center;
  padding-bottom: 1.5rem;
  font-family: overpass600;
}
  .attribution a {
  color: var(--white);
}

/* responsive */
@media (max-width: 700px) {
  header{
    height: 34rem ;
  }

  #navbarDropdown{
    color: var(--very-dark-blue) !important;
    font-weight: 600;
    font-size: 1.2rem;
  }

  #navbarDropdown:hover{
    text-decoration: none;
  }

  #text-button{
    color: black;
  }

  .navbar-nav .dropdown-menu{
    min-width: 18rem;
    text-align: center;
    padding: 1.5rem 0;
    border: 0;
    background-color: rgba(75, 88, 98, 0.068);
    line-height: 2rem;
  }

  .navbar-nav .dropdown-menu a{
    font-family: overpass600 !important;
    font-weight: 600 !important;
    color: var(--very-dark-grayish-blue);
    
  }

  .jumbotron h1{
    font-size: 2.4rem;
  }
  .jumbotron p{
    font-size: 1.3rem;
  }



  #about-comp{
    background-image: none;
  }

  #about-comp h1{
    font-size: 1.8rem;
    padding-right: .5rem;
    padding-left: .5rem;
  }

  .title{
    margin-bottom: 0px;
    padding-top: 0rem;
    padding-bottom: 2rem;
  }

  .component{
    display: inline;
  }

  .content{
    margin-top: 3rem;
    display: grid;
    justify-items: center;
    align-items: center;
  }

  .desc-top{
    margin-bottom: 1rem;
  }  

  .content .desc-top,
  .content .desc-bottom{
    width: 90% !important;
    text-align: center;
  }

  .content p{
    margin-top: 1rem;
  }

  #insight{
    margin-top: 10rem;
    margin-bottom: 1rem;
  }

  #insight .container img{
    margin-top: -15rem;
    width: 100%;
    margin-bottom: 1.5rem;
  }

  #insight .container{
    flex-direction: column;
    text-align: center;
  }

  #features{
    margin-top: 2rem;
    background-image: none;
    height: fit-content;
  }

  #features .content{
    align-items: center !important;
    margin-top: 2rem !important;
    
  }

  #features .features-top{
    margin-bottom: 1rem;
  }

  #features .features-top,
  #features .features-bottom{
    width: 90% !important;
    text-align: center;
  }

  footer .container{
    display: grid;
    grid-template-columns: 1fr;
    justify-items: center;
    text-align: center;
  }

  footer h5{
    margin-top: 3rem !important;
  }

  footer .footer-brand{
    margin-bottom: 1rem;
  }

  .hamburger{
    display: block;
  }

  .hamburger.active .bar:nth-child(2){
    opacity: 0;
  }

  .hamburger.active .bar:nth-child(1){
    transform: translateY(8px) rotate(45deg);
  }

  .hamburger.active .bar:nth-child(3){
    transform: translateY(-8px) rotate(-45deg);
  }

  .topbar-menu{
    display: grid;
    justify-content: center;
    position: absolute;
    top: 70px;
    left:1000%;
    width: 100%;
    text-align: center;
    background-color: white;
    padding: 2rem;
    border-radius: 10px;
    transition: 0.3s;
    box-shadow: -29px 32px 32px -14px rgba(0,0,0,0.75);
    z-index: 99;
    transition: 1s;

  }

  .topbar-menu .menu{
    margin: 0px !important;
  }

  .topbar-menu .user{
    display:grid;
    justify-items: center;
    border-top: 1px solid rgba(75, 88, 98, 0.404);
    padding-top: 1.5rem;
    width: 250px;
    margin: auto;
  }

  .topbar-menu.active{
    left: 0%;
    transition: 1s;
  }

  .user button:nth-child(2){
    background: linear-gradient(40deg, var(--very-light-red), var(--light-red) 90%);
    color: var(--white);
    margin-left: 0px !important;
    margin-top: 1rem;
  }

  .user button:nth-child(1){
    color: var(--very-dark-blue) !important
  }

  .user button{
    width: 50%;
    padding: .5rem .5rem .5rem .5rem;
    font-size: 1.2rem;
  }

  .topbar-menu ul li{
    margin-left: 0;
    margin-bottom: 1.5rem;
  }
}

